# agenticflow

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v0.1.0a1.md  ROADMAP.md  USAGE.md  WORKBOARD.md  config.yaml  csv_merge_report.md  huge_csv_analysis_report.md  hybrid_demo_report.md  pyproject.toml  pytest.ini  quickstart.py  test_simple_validation.py  ultimate_vision.md  v2_architecture.md  v2_vision.md
agenticflow/: __init__.py  ui.py
agenticflow/agent/: __init__.py  agent.py  hybrid_rpavh_agent.py  rpavh_agent.py
agenticflow/agents/: __init__.py  analysis_worker.py  data_agent.py  data_format_agent.py  document_agents.py  etl_agent.py  excel_agent.py  filesystem_agent.py  filesystem_enhanced_agent.py  filesystem_worker.py  python_agent.py  python_repl_agent.py  reporting_worker.py  research_agents.py  sql_agent.py  ssis_agent.py  tool_agent.py  utilities.py  validation_agents.py  web_scraping_agent.py
agenticflow/agents_repo/: __init__.py  analysis_agent.py  filesystem_agent.py  hybrid_analysis_agent.py  hybrid_filesystem_agent.py  hybrid_reporting_agent.py  reporting_agent.py  rpavh_filesystem_agent.py  rpavh_reporting_agent.py
agenticflow/ai/: file_qa.py
agenticflow/communication/: __init__.py
agenticflow/core/: __init__.py  agent.py  agent_state.py  command.py  config.py  diagnostics.py  env.py  flow.py  langgraph_state.py  logging.py  models.py  observable_flow.py  orchestrator.py  roles.py  rules.py  simple_agent.py  state.py  supervisor.py  task_status_tracker.py
agenticflow/knowledge/: types.py
agenticflow/observability/: __init__.py  config.py  debug.py  event_bus.py  event_monitor.py  event_tracker.py  events.py  exporters.py  flow_logger.py  graph.py  logger.py  logging.py  metrics.py  observable_agent.py  observer.py  progress.py  reporter.py  rich_console.py  subscribers.py  system_viz.py  tool_instrumentation.py  tool_wrapper.py  tracing.py  visualization.py  viz.py
agenticflow/orchestration/: __init__.py  service.py  topologies.py
agenticflow/orchestrator/: __init__.py  capability_extractor.py  orchestrator.py
agenticflow/planner/: planner.py  splitter.py
agenticflow/providers/: factory.py
agenticflow/registries/: __init__.py  resource_registry.py  tool_registry.py  tool_repo.py
agenticflow/registry/: __init__.py  resource_registry.py  tool_registry.py  tool_repo.py  toolset.py
agenticflow/reliability/: circuit_breaker.py
agenticflow/security/: __init__.py  audit.py  context.py  policy.py
agenticflow/teams/: __init__.py  supervisor.py  team_graph.py  team_state.py
agenticflow/tools/: __init__.py  bundle.py  ephemeral_chroma.py  file_tools.py  large_file_streaming.py  massive_dir_tools.py  search_tools.py  ssis_tools.py  tools.py  web_tools.py
agenticflow/ui/: server.py
agenticflow/util/: db.py  io.py  sys.py
agenticflow/workspace/: __init__.py  workspace.py
agents/: enhanced_system_aware_agent.py
artifacts/quickstart/: report.md  stats.json  system.dot  system.mmd  workflow.mmd
data/sample/: customer_data.csv  q3_2024_regional_data.csv  q3_2024_sales_data.csv  sales_data.csv
data/test/: sample_messages.json  (+1 more)
demos/: comprehensive_demo.py  debug_agent_execution.py  debug_graph_structure.py  debug_routing.py  quick_demo.py  research_and_write_team.py  research_report.md  simple_fixed_pattern.py  simple_langgraph_pattern.py  simple_test.py  simple_working_pattern.py  working_demo.py
docs/: API_REFERENCE.md  ARCHITECTURE_INTEGRATION.md  COMM_ADAPTERS_DESIGN.md  COMPREHENSIVE_TEST_RESULTS.md  EXAMPLES.md  OBSERVABILITY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_LANGGRAPH_INTEGRATION.md  SECURITY_POLICY.md  SPECIALIZED_AGENTS.md  SSIS_AGENT_SUMMARY.md  UI_FEATURES.md  USAGE.md  UTILITIES.md  api-reference.md  api.md  architecture.md  blueprints-roadmap.md  blueprints.md  index.md  itc-streaming.md  mcp_integration.md  mermaid-improvements.md  orchestration-streaming.md  quick_start.md  usage-guide.md
examples/: 10_rag.py  README.md  README_MCP.md  __init__.py  agent_memory_demo.py  azure_openai_demo.py  basic_workflow.py  capabilities_demo.py  complete_oop_demo.py  complex_orchestration_test.py  comprehensive_agents.py  console_comparison_demo.py  csv_merge_demo.py  csv_merge_report.md  custom_provider_example.py  debug_agent.py  demo.py  demo_agents_modern.py  demo_clean_observability.py  demo_csv_merge.py  demo_csv_simple.py  demo_enhanced_rpavh.py  demo_enhanced_system.py  demo_framework_oop.py  demo_huge_csv_analysis.py  demo_llm_minimal.py  demo_proper_architecture.py  demo_simple_weather.py  demo_ssis_packages_report.py  demo_weather_comparison.py  dir_search_demo.py  dir_walk_search.py  direct_llm_demo.py  easy_setup_demo.py  ebay_chroma_demo.py  ebay_intelligent_demo.py  final_tool_calling_validation.py  huge_csv_analysis_demo.py  huge_csv_analysis_report.md  hybrid_human_demo.py  (+49 more)
scripts/: README.md  bench_fs.py  test_installation.py
tests/: __init__.py  conftest.py  run_tests.py  test_agent_fsm.py  test_ai_file_qa_noop.py  test_api_comprehensive.py  test_approval_gate.py  test_basic_functionality.py  test_blueprints.py  test_capability_registry.py  test_circuit_breaker.py  test_comm_bus_inmemory.py  test_comm_bus_nats.py  test_comm_bus_nats_js.py  test_comm_bus_redis.py  test_comm_bus_redis_streams.py  test_comm_bus_websocket.py  test_comprehensive.py  test_debug_filters_summary.py  test_debug_interface.py  test_eventstore_sqlite.py  test_filesystem_tools.py  test_graph_mermaid.py  test_group_chat_topology.py  test_hybrid_minimal.py  test_itc_streaming.py  test_llm_decomposer.py  test_llm_schema.py  test_mermaid_advanced_features.py  test_mermaid_syntax_validation.py  test_observability.py  test_observability_optional.py  test_observability_simple.py  test_orchestrator_cancel_timeout_compensate.py  test_orchestrator_circuit_rate.py  test_orchestrator_collision.py  test_orchestrator_concurrency.py  test_orchestrator_resume.py  test_orchestrator_retry_timeout.py  test_orchestrator_security_backoff.py  (+24 more)
(+435 files in other folders)
