[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenticflow"
version = "0.2.0"
description = "Advanced AI Multi-Agent Framework for Developers"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Core LangChain and LangGraph
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langgraph>=0.2.0",

    # LLM Providers (optional but commonly used)
    "langchain-groq>=0.1.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-huggingface>=0.0.3",

    # Security and encryption
    "cryptography>=41.0.0",

    # Core utilities
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.1",
    "aiofiles>=23.0.0",
    "structlog>=23.0.0",
    "pyyaml>=6.0",

    # Data processing
    "pandas>=2.0.0",

    # HTTP and async
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
select = ["E", "F", "I", "N", "W"]
ignore = []
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
