[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenticflow"
version = "1.0.0"
description = "A simple, clean multi-agent framework with hierarchical team support"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "AgenticFlow Team", email = "team@agenticflow.com"},
]
keywords = ["ai", "agents", "multi-agent", "workflow", "langgraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-tavily>=0.1.0",
    "langgraph>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/agenticflow/agenticflow"
Repository = "https://github.com/agenticflow/agenticflow"
Documentation = "https://agenticflow.readthedocs.io"
"Bug Tracker" = "https://github.com/agenticflow/agenticflow/issues"

[project.scripts]
agenticflow = "agenticflow.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agenticflow"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"